k8s/base/storage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  strategy:
    type: Recreate # trivially avoids multi-mount error on persistent volumes in exchange for some downtime
  template:
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2023-01-06T18-11-18Z
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          volumeMounts:
            - name: miniodata
              mountPath: /data
          resources: {}
          args:
            - "server"
            - "/data"
            - "--console-address"
            - ":9001"
      volumes:
        - name: miniodata
          persistentVolumeClaim:
            claimName: pvc
