k8s/base/storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
