k8s/base/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_input_headers 'Host: storage-service:9000';
    #   more_set_input_headers 'Host: minio:9000';
    # nginx.ingress.kubernetes.io/ignore-invalid-headers: "false"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   ignore_invalid_headers off;
spec:
  ingressClassName: nginx
  rules:
